--- a/python_study/2025_0714.md
+++ b/python_study/2025_0714.md
@@ -1,5 +1,5 @@
 # 2025_0714
-### part 2
+### part 2 변수와 계산
 
 1. 변수<br>
 name='선희' >print("내 이름은",name,"야")<br>
@@ -11,15 +11,35 @@ name='선희' >print("내 이름은",name,"야")<br>
 2+3=5 <>'2'+'3'=23</br>
 %-나머지, **-제곱
 4. shell<br>
-pwd : 현재 폴더 경로 출력<br>
-ls : 현재 폴더 내용물 출력<br>
-cd : 다른 폴더로 이동<br>
-cp : 파일을 다른 이름으로 복사\
-rm : 파일을 삭제시킴 
-### part 3
+- pwd : 현재 폴더 경로 출력<br>
+- ls : 현재 폴더 내용물 출력<br>
+- cd : 다른 폴더로 이동<br>
+- cp : 파일을 다른 이름으로 복사\
+- rm : 파일을 삭제시킴 
+### part 3 조건문
 1. if문<br>
 if 조건:<br>
 &ensp;실행시킬 문장 -조건이 참일때 문장을 실행시킴
 
 2. 조건식</br>
 ==같다 / != 같지않다
+
+3. 블럭</br>
+- 함꼐 실행되는 코드, 들여쓰기로 구분함
+
+4. if  else</br>
+if 조건 1:</br>
+&ensp;실행 1</br>
+elif 조건 2:</br>
+&ensp;실행 2</br>
+else :</br>
+&ensp;실행 3</br>
+조건 1이 참일때 실행 1, 2가 참일때 실행 2, 둘다 아닐때 실행 3
+
+### part 3 함수
+1. 함수</br>
+def 함수이름():</br>
+&ensp;&ensp;함수내용</br>
+함수이름() ==함수호출
+
+
